! API: ColorProvider marked as deprecated, clients should replace it by UIBridge.
- API, Layout: The ConflictResolver in common can now be used to resolve conflicts on resize when locked CDockables are around. Can be applied using the key CControl.RESIZE_LOCK_CONFLICT_RESOLVER
- API: New ConflictResolver "FullLockConflictResolver" inspired by the behavior of VLDocking
- Bugfix: DefaultConflictResolver creates now better combinations of ResizeRequests if the combined requests have different priority
! API: The size request is now handled with RequestDimension and no longer with Dimension. This allows to issue requests only for one of width or height, and to lock only one of width or height
- API: new interface DockElementRepresentative which creates a link between a Component and a DockElement. Allows a unified way to make popup menus, drag and drop Dockables and more
! API: Dockable and DockTitle now also implement DockElementRepresentative
- Bugfix: when opening a CDockable that would stack on another CDockable which was maximized, the layout could get scrambled.
- Layout: Closing a maximized CDockable will not normalize other maximized Dockables
- API, Layout: Clicking on the "close-action" in common and calling "setVisible( false )" will now have the exact same effects.

- API: new preferences package, includes new MenuPieces
! API: SimpleModifierMask has been deleted, it gets replaced by ModiferMask which is no longer an interface. Reason is that a modifier mask does not need to be very sophisticated and chances of additional implementions are hardly given. Also the preferences can now operate with the modifier masks.
- API: AbstractCDockable can have default-locations, the default locations are set using the new method CStateManager#setLocation(Dockable, ExtendedMode, CLocation)